<resources>
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="minlength">Password must be at least %1$d characters</string>
    <string name="required">This field is Required</string>
    <string name="not_valid_email">This is not a valid email</string>
    <string name="log_out">Logout</string>
    <string name="story_images">Story images</string>
    <string name="add_new_story">Add new story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="oops">Oops, something went wrong!</string>
    <string name="no_connection">Couldn\'t reach server, check your internet connection.</string>
    <string name="no_data_available">No data available</string>
    <string name="refresh">Refresh</string>
    <string name="invalid_credentials">Your email or password is invalid</string>
    <string name="email_taken">This email already taken</string>
    <string name="success_register">Register successfully, please login to continue</string>
    <string name="failed_open_camera">Failed to open the camera</string>
    <string name="failed_take_photo">Failed to take photo</string>
    <string name="failed_get_persmission">Failed to get a permission</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="choose_image_warn">Please choose image file firstly</string>
    <string name="lang_preference">Language Preference</string>
    <string name="appwidget_text">Stories Banner</string>
    <string name="empty_text">No Data</string>
    <string name="upload_success">Successfully uploaded image</string>
    <string name="please_activate_location_message">Please activate your location services</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
    <string name="style_map_failed">Style parsing failed.</string>
    <string name="style_map_error">Can\'t find style. Error: %s</string>
    <string name="maps">Maps</string>
    <string name="share_location">Share location?</string>
</resources>