<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.heyproject.storyapp.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_storyDetailFragment"
            app:destination="@id/storyDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@android:anim/slide_out_right"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_storyAddActivity"
            app:destination="@id/storyAddActivity" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/storyDetailFragment"
        android:name="com.heyproject.storyapp.ui.story_detail.StoryDetailFragment"
        android:label="Story Detail"
        tools:layout="@layout/fragment_story_detail">
        <action
            android:id="@+id/action_storyDetailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="name"
            android:defaultValue="story_name"
            app:argType="string" />
        <argument
            android:name="description"
            android:defaultValue="story_description"
            app:argType="string" />
        <argument
            android:name="photoUrl"
            android:defaultValue="photo_url"
            app:argType="string" />
        <action
            android:id="@+id/action_storyDetailFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/storyDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/storyAddActivity"
        android:name="com.heyproject.storyapp.ui.story_add.StoryAddActivity"
        android:label="activity_story_add"
        tools:layout="@layout/activity_story_add" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.heyproject.storyapp.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.heyproject.storyapp.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>